salesforce_app/force-app/main/default/objects/PubSubMessage__e/PubSubMessage__e.object-meta.xml
<CustomObject>
    <description>Used for demo Publish and Subscribe of Platform Events</description>
    <label>PubSubMessage</label>
    <pluralLabel>PubSubMessages</pluralLabel>
</CustomObject>