salesforce_app/force-app/main/default/objects/PubSubMessage__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message published by a User</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>