salesforce_app/force-app/main/default/objects/PubSubMessage__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Name of the publisher for this message</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>