salesforce_app/force-app/main/default/objects/PubSubMessage__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Unique Id for each Event</description>
    <label>UUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>